--- a/method.html
+++ b/method.html
@@ -3,8 +3,14 @@
 
 <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Method | Silverline Tutoring</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description"
+		content="View the method leading Silverline Tutoring to succeed." />
+	<meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large" />
+	<meta http-equiv="content-language" content=”en-us”>
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +24,6 @@
 
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-
     <link rel="stylesheet" href="css/tiny-slider.css">
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/aos.css">
@@ -28,8 +33,6 @@
     <link rel="stylesheet" href="css/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="css/fontawesome/webfonts/.">
     <link rel="icon" type="image/x-icon" href="images/icon.svg">
-
-    <title>Silverline Tutoring | Method</title>
 </head>
 
 <body>
@@ -46,8 +49,8 @@
     <nav class="site-nav ">
         <div class="container nav1">
 
-            <img style="max-height: 70px; margin-top: -15px;" class="float-start" src="images/logo4.svg">
-            <img style="max-height: 70px; margin-top: -15px;" class="float-start1 hide" src="images/logo1.svg">
+            <img style="max-height: 70px; margin-top: -15px;" alt="silverline tutoring logo" class="float-start" src="images/logo4.svg">
+            <img style="max-height: 70px; margin-top: -15px;" alt="silverline tutoring logo" class="float-start1 hide" src="images/logo1.svg">
             <div class="site-navigation">
 
 
