--- a/community.html
+++ b/community.html
@@ -3,8 +3,14 @@
 
 <head>
 	<!-- Required meta tags -->
-	<meta charset="utf-8">
+	<title>Community | Silverline Tutoring</title>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description"
+		content="Learn more about Silverline's supporting community." />
+	<meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large" />
+	<meta http-equiv="content-language" content=”en-us”>
+
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<link
@@ -25,7 +31,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" type="image/x-icon" href="images/icon.svg">
 
-	<title>Silverline Tutoring | Community</title>
+
 </head>
 
 <body>
@@ -42,8 +48,8 @@
 	<nav class="site-nav ">
 		<div class="container nav1">
 
-			<img style="max-height: 70px; margin-top: -15px;" class="float-start" src="images/logo4.svg">
-			<img style="max-height: 70px; margin-top: -15px;" class="float-start1 hide" src="images/logo1.svg">
+			<img style="max-height: 70px; margin-top: -15px;" alt="silverline tutoring logo" class="float-start" src="images/logo4.svg">
+			<img style="max-height: 70px; margin-top: -15px;" alt="silverline tutoring logo" class="float-start1 hide" src="images/logo1.svg">
 			<div class="site-navigation">
 
 
@@ -129,7 +135,7 @@
 		</div><br><br>
 		<div class="container">
 			<div class="row align-items-center">
-				<img src="images/community/map.png">
+				<img src="images/community/map.png" alt="map of silverline worldwide">
 				<div class="col-lg-1"></div>
 				<div class="col-lg-12">
 					<h1 style="color: #918CA1; font-family: 'Work Sans', sans-serif;
