--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 
 <head>
-	<!-- Required meta tags -->
-	<meta charset="utf-8">
+	<!-- SEO -->
+	<title>A one-stop community for all student resources — Silverline Tutoring</title>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Silverline Tutoring is an educational 501(c)(3) nonprofit organization connecting tutors and students in a community with over 900 dedicated members. Founded by college and high school students, we recognize the difficulty of learning—we’ve all been there..">
-	<meta name="keywords" content="tutoring, education, free learning, volunteering, 501(c)(3)">
+	<meta name="description" content="Silverline Tutoring is an educational 501(c)(3) nonprofit connecting tutors and students within our organization of over 1600 dedicated members. Founded by college and high school students, this organization recognizes the difficulty of learning—we’ve all been there—and we’re here to help."/>
+	<meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large"/>
+	<meta http-equiv="content-language" content=”en-us”>
+
+
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +29,6 @@
 	<link rel="stylesheet" href="css/fontawesome/css/all.min.css">
 	<link rel="stylesheet" href="css/fontawesome/webfonts/.">
 	<link rel="icon" type="image/x-icon" href="images/icon.svg">
-	<title>Silverline Tutoring</title>
 </head>
 <body>
 	<div class="site-mobile-menu site-navbar-target">
@@ -38,8 +41,8 @@
 	</div>
 	<nav class="site-nav ">
 		<div class="container nav1">
-			<img style="max-height: 70px; margin-top: -15px;" class="float-start" src="images/logo4.svg">
-			<img style="max-height: 70px; margin-top: -15px;" class="float-start1 hide" src="images/logo1.svg">
+			<img style="max-height: 70px; margin-top: -15px;" alt="silverline logo" class="float-start" src="images/logo4.svg">
+			<img style="max-height: 70px; margin-top: -15px;" alt="silverline logo" class="float-start1 hide" src="images/logo1.svg">
 			<div class="site-navigation">
 				<ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu float-start">
 					<li class="active"><a href="index.html">Home</a></li>
@@ -113,7 +116,7 @@
 				<div class="col-lg-6">
 					<div class="row">
 						<div class="col-12 col-lg-12" data-aos="fade-up" data-aos-delay="400">
-							<img src="images/Home/about_1.png" alt="Image" class="gen-img" style="margin-left: 20px;">
+							<img src="images/Home/about_1.png" alt="a tutoring session between a college student from Carnegie Mellon Univeristy and a highschooler" class="gen-img" style="margin-left: 20px;">
 						</div>
 					</div>
 				</div>
@@ -154,7 +157,7 @@
 						<div class="destination-slider">
 							<div class="destination">
 								<div class="thumb">
-									<img src="images/Home/eng.png" alt="Image" class="img-fluid">
+									<img src="images/Home/eng.png" alt="icon for Versatile" class="img-fluid">
 								</div>
 								<div class="mt-4">
 									<h3>>Versatile Tutoring</h3>
@@ -165,7 +168,7 @@
 							</div>
 							<div class="destination">
 								<div class="thumb">
-									<img src="images/Home/flexibile.png" alt="Image" class="img-fluid">
+									<img src="images/Home/flexibile.png" alt="icon for flexibile tutoring" class="img-fluid">
 								</div>
 								<div class="mt-4">
 									<h3>Flexibility</h3>
@@ -175,7 +178,7 @@
 							</div>
 							<div class="destination">
 								<div class="thumb">
-									<img src="images/Home/community.png" alt="Image" class="img-fluid">
+									<img src="images/Home/community.png" alt="icon for community" class="img-fluid">
 								</div>
 								<div class="mt-4">
 									<h3>Community</h3>
@@ -185,7 +188,7 @@
 							</div>
 							<div class="destination">
 								<div class="thumb">
-									<img src="images/Home/quality.png" alt="Image" class="img-fluid">
+									<img src="images/Home/quality.png" alt="icon for lessons" class="img-fluid">
 								</div>
 								<div class="mt-4">
 									<h3>Quality Lessons</h3>
@@ -251,7 +254,7 @@
 							<div class="item">
 								<blockquote class="block-testimonial">
 									<div class="author">
-										<img src="images/anonymous.jpg" alt="Free template by TemplateUX">
+										<img src="images/anonymous.jpg" alt="testimonial from Rithvik">
 										<h3 style="color: #ffff;">Rithvik</h3>
 										<p style="color: #b6bbd2;" class="mb-5">High School Sophomore</p>
 									</div>
@@ -265,7 +268,7 @@
 							<div class="item">
 								<blockquote class="block-testimonial">
 									<div class="author">
-										<img src="images/anonymous.jpg" alt="Free template by TemplateUX">
+										<img src="images/anonymous.jpg" alt="testimonial from Shanti">
 										<h3 style="color: #ffff;">Shanti</h3>
 										<p style="color: #b6bbd2;" class="mb-5">A Parent</p>
 									</div>
@@ -282,7 +285,7 @@
 							<div class="item">
 								<blockquote class="block-testimonial">
 									<div class="author">
-										<img src="images/anonymous.jpg" alt="Free template by TemplateUX">
+										<img src="images/anonymous.jpg" alt="testimonial from Li">
 										<h3 style="color: #ffff;">Li Jian</h3>
 										<p style="color: #b6bbd2;" class="mb-5">8th Grader</p>
 									</div>
@@ -296,7 +299,7 @@
 							<div class="item">
 								<blockquote class="block-testimonial">
 									<div class="author">
-										<img src="images/anonymous.jpg" alt="Free template by TemplateUX">
+										<img src="images/anonymous.jpg" alt="testimonial from Rithin">
 										<h3 style="color: #ffff;">Rithin</h3>
 										<p style="color: #b6bbd2;" class="mb-5">High School Junior</p>
 									</div>
