--- a/reviews.html
+++ b/reviews.html
@@ -3,8 +3,12 @@
 
 <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Reviews | Silverline Tutoring</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="robots" content="nofollow, noindex, max-snippet:-1, max-video-preview:-1, max-image-preview:large" />
+	<meta http-equiv="content-language" content=”en-us”>
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link
@@ -25,7 +29,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="images/icon.svg">
 
-    <title>Silverline Tutoring | Reviews</title>
 </head>
 
 <body>
@@ -42,8 +45,8 @@
     <nav class="site-nav ">
         <div class="container nav1">
 
-            <img style="max-height: 70px; margin-top: -15px;" class="float-start" src="images/logo4.svg">
-            <img style="max-height: 70px; margin-top: -15px;" class="float-start1 hide" src="images/logo1.svg">
+            <img style="max-height: 70px; margin-top: -15px;" alt="silverline tutoring logo" class="float-start" src="images/logo4.svg">
+            <img style="max-height: 70px; margin-top: -15px;" alt="silverline tutoring logo" class="float-start1 hide" src="images/logo1.svg">
             <div class="site-navigation">
 
 
