--- a/services.html
+++ b/services.html
@@ -2,8 +2,14 @@
 <html lang="en">
 <head>
 	<!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Services | Silverline Tutoring</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description"
+		content="Find the numerous services Silverline Tutoring offers from tutoring to lectures!" />
+	<meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large" />
+	<meta http-equiv="content-language" content=”en-us”>
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +34,6 @@
     <link rel="stylesheet" href="css/fontawesome/webfonts/.">
     <link rel="icon" type="image/x-icon" href="images/icon.svg">
 
-    <title>Silverline Tutoring | Method</title>
 </head>
 <body>
 
@@ -44,8 +49,8 @@
 	<nav class="site-nav ">
 		<div class="container nav1">
 
-			<img style="max-height: 70px; margin-top: -15px;" class="float-start" src="images/logo4.svg">
-			<img style="max-height: 70px; margin-top: -15px;" class="float-start1 hide" src="images/logo1.svg">
+			<img style="max-height: 70px; margin-top: -15px;" alt="silverline tutoring logo" class="float-start" src="images/logo4.svg">
+			<img style="max-height: 70px; margin-top: -15px;" alt="silverline tutoring logo" class="float-start1 hide" src="images/logo1.svg">
 			<div class="site-navigation">
 
 
@@ -113,7 +118,7 @@
 				<div class="col-lg-6">
 					<div class="row">
 						<div class="col-12 col-lg-12" data-aos="fade-up" data-aos-delay="400">
-							<img src="images/services/tutoring.png" alt="Image" class="gen-img" style="">
+							<img src="images/services/tutoring.png" alt="tutoring services" class="gen-img" style="">
 						</div>
 
 					</div>
@@ -136,7 +141,7 @@
 				<div class="col-lg-6">
 					<div class="row">
 						<div class="col-12 col-lg-12" data-aos="fade-up" data-aos-delay="400">
-							<img src="images/services/resources.jpeg" alt="Image" class="gen-img" style="">
+							<img src="images/services/resources.jpeg" alt="resource service" class="gen-img">
 						</div>
 
 					</div>
@@ -152,7 +157,7 @@
 				<div class="col-lg-6">
 					<div class="row">
 						<div class="col-12 col-lg-12" data-aos="fade-up" data-aos-delay="400">
-							<img src="images/services/lectures.png" alt="Image" class="gen-img" style="padding-bottom: 20px;">
+							<img src="images/services/lectures.png" alt="lecture services" class="gen-img" style="padding-bottom: 20px;">
 						</div>
 
 					</div>
@@ -176,7 +181,7 @@
 				<div class="col-lg-6">
 					<div class="row">
 						<div class="col-12 col-lg-12" data-aos="fade-up" data-aos-delay="400">
-							<img src="images/services/shorts.png" alt="Image" class="gen-img" style="padding-bottom: 20px;">
+							<img src="images/services/shorts.png" alt="youtube shorts" class="gen-img" style="padding-bottom: 20px;">
 						</div>
 
 					</div>
