--- a/team.html
+++ b/team.html
@@ -152,7 +152,7 @@
                         <div class="bg-white m-body">
                             <h5 style="text-align: center;">John Derham</h5>
                             <h6 style="padding: 5px; border-radius: 5px; background: #5271FF; text-align: center;">Chief Operating Officer</h6>
-                            <p>John Derham is currently a rising senior at the Perkiomen School in Pennsylvania. His passion for chess was what led him to eventually find Silverline Tutoring. Once he started playing Chess at the beginning of the COVID pandemic like many others, he wanted to connect with others online, and turned to discord, where he found Silverline Tutoring with the opportunity to tutor chess. There, he fell in love with the unique community and he took the opportunity to become COO in order to be able to make more positive changes in the community. One of the biggest changes he made was expanding the chess division and starting collaborations with other groups to host tournaments. In his personal life, he enjoys Math and Physics classes and also plays the piano. For college, he hopes to join the US Air Force through their Academy/ROTC or get a degree in engineering. Currently, his top choices for college include the USAF Academy, Stevens Institute of Technology, and Rose Hulman.</p>
+                            <p>John Derham is currently a rising senior at the Perkiomen School in Pennsylvania. His passion for chess was what led him to eventually find Silverline Tutoring. Once he started playing Chess at the beginning of the COVID pandemic like many others, he wanted to connect with others online, and turned to discord, where he found Silverline Tutoring with the opportunity to tutor chess. There, he fell in love with the unique community and he took the opportunity to become COO in order to be able to make more positive changes in the community. One of the biggest changes he made was expanding the chess division and starting collaborations with other groups to host tournaments. In school, his favorite classes are Math and Physics. In his free time when he’s not hanging out with friends or working with Silverline, John likes to play chess and play the piano. He also runs track and plays tennis and soccer. For college, he hopes to join the US Air Force through their Academy/ROTC or get a degree in engineering. Currently, his top choices for college include the USAF Academy, Stevens Institute of Technology, and Rose Hulman.</p>
                             <p>Education: <br><br> <span style="color: #AFA99E;">Chelmsford High School '23</span></p>
                             <p>Hobbies</p>
                             <ul>
@@ -428,6 +428,28 @@
                                 <li>Video/photo editing</li>
                                 <li>Music</li>
                             </ul>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+                    <div class="media-entry media-size2">
+                        <a href="single.html" style="background: none;" class="text-center">
+                            <img src="images/team/mann.png" alt="lexi leid" class="img-fluid">
+                        </a>
+                        <div class="bg-white m-body">
+                            <h5 style="text-align: center;">Mann Talati</h5>
+                            <h6 style="padding: 5px; border-radius: 5px; background: #338f72; text-align: center;">Marketing Intern</h6>
+                            <p>Mann Talati is currently a high school junior from Northern Illinois. His passion for web development and computer science came from a young age when he started to learn how to code. He loves learning different languages and hanging out with friends whenever he gets the chance. He wants to pursue a degree in Computer Science in the future and wishes to work for one of the big ten companies. He has experienced an internship before and loves the STEM field in and out of school. He tutors kids from grades K-3rd to help them with math and succeed. He also volunteers at places such as Feed My Starving Children and loves to help out at school through clubs and service events. After seeing Silverline’s expansive work ethic and great qualities he quickly realized how much he loved the company and how much their goals aligned with his. Silverline wishes to help students succeed and he wishes to help them grow and learn throughout this process.
+                            </p>
+                            <p>Education: <br><br> <span style="color: #AFA99E;">Metea Valley ‘24</span></p>
+                            <p>Hobbies</p>
+                            <ul>
+                                <li>Gaming</li>
+                                <li>Volleyball</li>
+                                <li>Coding</li>
+                                <li>Stocks</li>
+                    
 
                         </div>
                     </div>
@@ -795,13 +817,13 @@
                 <div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
                     <div class="media-entry media-size1">
                         <a href="single.html" style="background: none;" class="text-center">
-                            <img src="images/team/swathi.png" alt="swathi rao" class="img-fluid">
+                            <img src="images/team/ronak.png" alt="swathi rao" class="img-fluid">
                         </a>
                         <div class="bg-white m-body">
-                            <h5 style="text-align: center;">Swathi Rao</h5>
+                            <h5 style="text-align: center;">Ronak Patel</h5>
                             <h6 style="padding: 5px; border-radius: 5px; background: #c99206; text-align: center;">Tutor
                             </h6>
-                            <p>Swathi Is a junior at UT Dallas majoring in Neuroscience. When she was younger, she was incredibly ambitious and had aspirations to become a medical professional. She started learning the right way to learn and teach others, which has ultimately led her to become a straight-A student throughout high school and college. She hopes she can help students with whatever subject they need help with as well as teach them study skills and build a relationship with her students in which she can also learn from them. She has been with Silverline tutoring since Summer 2022 and enjoys being a part of the global community that the service offers. At Silverline, she tutors in High School to College Level Science, ACT and SAT as well as History and English.
+                            <p>Ronak is a high school junior in Texas. He enjoys prepping for debate and playing video games. Ronak has joined Silverline Tutoring to help students on their pathway through higher education, after seeing how much students can struggle in math concepts and tutoring high school students from failing to being in the top of their math class. He tutors math concepts all the way to algebra II as he has completed curriculum up to college algebra taken at the University of Texas at Austin. He hopes to one day become a doctor and is already working towards a degree. Ronak has just about a year of tutoring experience tutoring concepts from 7th grade math up to algebra II and is looking forward to reaching more students through Silverline.
                             </p>
 
                         </div>
