--- a/team.html
+++ b/team.html
@@ -153,12 +153,13 @@
                             <h5 style="text-align: center;">John Derham</h5>
                             <h6 style="padding: 5px; border-radius: 5px; background: #5271FF; text-align: center;">Chief Operating Officer</h6>
                             <p>John Derham is currently a rising senior at the Perkiomen School in Pennsylvania. His passion for chess was what led him to eventually find Silverline Tutoring. Once he started playing Chess at the beginning of the COVID pandemic like many others, he wanted to connect with others online, and turned to discord, where he found Silverline Tutoring with the opportunity to tutor chess. There, he fell in love with the unique community and he took the opportunity to become COO in order to be able to make more positive changes in the community. One of the biggest changes he made was expanding the chess division and starting collaborations with other groups to host tournaments. In school, his favorite classes are Math and Physics. In his free time when he’s not hanging out with friends or working with Silverline, John likes to play chess and play the piano. He also runs track and plays tennis and soccer. For college, he hopes to join the US Air Force through their Academy/ROTC or get a degree in engineering. Currently, his top choices for college include the USAF Academy, Stevens Institute of Technology, and Rose Hulman.</p>
-                            <p>Education: <br><br> <span style="color: #AFA99E;">Chelmsford High School '23</span></p>
+                            <p>Education: <br><br> <span style="color: #AFA99E;">Perkiomen School ‘23</span></p>
                             <p>Hobbies</p>
                             <ul>
+                                <li>Chess</li>
+                                <li>Piano</li>
                                 <li>Tutoring</li>
-                                <li>Basketball</li>
-                                <li>Music</li>
+                                <li>Track</li>
                             </ul>
 
                         </div>
@@ -439,7 +440,7 @@
                         </a>
                         <div class="bg-white m-body">
                             <h5 style="text-align: center;">Mann Talati</h5>
-                            <h6 style="padding: 5px; border-radius: 5px; background: #338f72; text-align: center;">Marketing Intern</h6>
+                            <h6 style="padding: 5px; border-radius: 5px; background: #338f72; text-align: center;">Web Intern</h6>
                             <p>Mann Talati is currently a high school junior from Northern Illinois. His passion for web development and computer science came from a young age when he started to learn how to code. He loves learning different languages and hanging out with friends whenever he gets the chance. He wants to pursue a degree in Computer Science in the future and wishes to work for one of the big ten companies. He has experienced an internship before and loves the STEM field in and out of school. He tutors kids from grades K-3rd to help them with math and succeed. He also volunteers at places such as Feed My Starving Children and loves to help out at school through clubs and service events. After seeing Silverline’s expansive work ethic and great qualities he quickly realized how much he loved the company and how much their goals aligned with his. Silverline wishes to help students succeed and he wishes to help them grow and learn throughout this process.
                             </p>
                             <p>Education: <br><br> <span style="color: #AFA99E;">Metea Valley ‘24</span></p>
@@ -484,6 +485,27 @@
                         </a>
                         <div class="bg-white m-body">
                             <h5 style="text-align: center;">Mihir Bhanji</h5>
+                            <h6 style="padding: 5px; border-radius: 5px; background: #338f72; text-align: center;">Marketing Intern</h6>
+                            <p>Mihir Bhanji is currently a high school senior at Esperanza High School in Southern California. Mihir joined Silverline Tutoring because of his passion towards tutoring and helping others achieve their goals. What made Silverline appealing to Mihir, was their initiative towards closing the education gap, and providing all students with free tutoring resources. This resonates deeply with him, because he’s seen first hand what happens when students lack adequate resources to learn. He became a marketing intern, because he’s always been curious and interested about marketing, and wants to gain more experience in the world of marketing. In school, he loves being the president of his school’s robotics and rocketry club. His passion for engineering in high school, has led him to plan to major in mechanical engineering in college. He loves being a part of, and being able to make a difference in his community. He pursues these passions by organizing toy drives and school cleanups at his high school. In addition, he also volunteers and organizes events for his local library. He believes his years of tutoring experience, and passion will be able to help countless students.
+                            </p>
+                            <p>Education: <br><br> <span style="color: #AFA99E;">Esperanza Class of 23’</span></p>
+                            <p>Hobbies</p>
+                            <ul>
+                                <li>Wrestling </li>
+                                <li>Reading</li>
+                                <li>Video Games</li>
+                                <li>Cooking</li>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+                    <div class="media-entry media-size2">
+                        <a href="single.html" style="background: none;" class="text-center">
+                            <img src="images/team/avaneesh.png" alt="mihir bhanji" class="img-fluid">
+                        </a>
+                        <div class="bg-white m-body">
+                            <h5 style="text-align: center;">Avaneesh Mallela</h5>
                             <h6 style="padding: 5px; border-radius: 5px; background: #338f72; text-align: center;">Marketing Intern</h6>
                             <p>Mihir Bhanji is currently a high school senior at Esperanza High School in Southern California. Mihir joined Silverline Tutoring because of his passion towards tutoring and helping others achieve their goals. What made Silverline appealing to Mihir, was their initiative towards closing the education gap, and providing all students with free tutoring resources. This resonates deeply with him, because he’s seen first hand what happens when students lack adequate resources to learn. He became a marketing intern, because he’s always been curious and interested about marketing, and wants to gain more experience in the world of marketing. In school, he loves being the president of his school’s robotics and rocketry club. His passion for engineering in high school, has led him to plan to major in mechanical engineering in college. He loves being a part of, and being able to make a difference in his community. He pursues these passions by organizing toy drives and school cleanups at his high school. In addition, he also volunteers and organizes events for his local library. He believes his years of tutoring experience, and passion will be able to help countless students.
                             </p>
