--- a/team.html
+++ b/team.html
@@ -507,15 +507,15 @@
                         <div class="bg-white m-body">
                             <h5 style="text-align: center;">Avaneesh Mallela</h5>
                             <h6 style="padding: 5px; border-radius: 5px; background: #338f72; text-align: center;">Marketing Intern</h6>
-                            <p>Mihir Bhanji is currently a high school senior at Esperanza High School in Southern California. Mihir joined Silverline Tutoring because of his passion towards tutoring and helping others achieve their goals. What made Silverline appealing to Mihir, was their initiative towards closing the education gap, and providing all students with free tutoring resources. This resonates deeply with him, because he’s seen first hand what happens when students lack adequate resources to learn. He became a marketing intern, because he’s always been curious and interested about marketing, and wants to gain more experience in the world of marketing. In school, he loves being the president of his school’s robotics and rocketry club. His passion for engineering in high school, has led him to plan to major in mechanical engineering in college. He loves being a part of, and being able to make a difference in his community. He pursues these passions by organizing toy drives and school cleanups at his high school. In addition, he also volunteers and organizes events for his local library. He believes his years of tutoring experience, and passion will be able to help countless students.
+                            <p>Avaneesh Mallela is a high school student attending Westford Academy.  Being a avid reader, he loves to learn. Ever since a young age, the internet and business have always intrigued him. He always looks at ways that these 2 things can be improved in any organization he works with as well as their application being combined. It is something that he loves and aspires to do evidenced by his projects all the way back in elementary school using google maps to find the most effective path to sell candy and what to say by looking at the street on which he is on to sell the candy. This is just one of many things he has done but he is not satisfied! Using technology and his experience in business he looks to find interesting ways to further any organization he is apart of. His experience in technology is evidenced by his extensive understanding of business solutions evidenced by him winning hackathons as well as attending the coveted-DECA SCDC competition. Something Avaneesh values high is education which is the main factor on which he joined Silverline tutoring. His aim in joining Silverline tutoring is to further expand the reach and quality of the services offered by leveraging his skills as well as learning new skills.
                             </p>
-                            <p>Education: <br><br> <span style="color: #AFA99E;">Esperanza Class of 23’</span></p>
+                            <p>Education: <br><br> <span style="color: #AFA99E;">Westford Academy 23’</span></p>
                             <p>Hobbies</p>
                             <ul>
-                                <li>Wrestling </li>
+                                <li>Beach </li>
+                                <li>Gym</li>
                                 <li>Reading</li>
-                                <li>Video Games</li>
-                                <li>Cooking</li>
+                                <li>Traveling</li>
 
                         </div>
                     </div>
